Fix overflow issue on chrome

--- a/src/assets/styles/6-components.scss
+++ b/src/assets/styles/6-components.scss
@@ -168,10 +168,12 @@
 }
 
 .parallax {
-  width: inherit;
-  height: inherit;
-  flex: 1;
   overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   &__layer {
     width: 100%;
